@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "6.2.2",
+  "version": "6.3.0",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
@@ -30,7 +30,7 @@
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 4.12.0 < 6.0.0"
+      "version_requirement": ">= 4.12.0 < 7.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -59,7 +59,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.10.4 < 6.0.0"
+      "version_requirement": ">= 5.0.0 < 7.0.0"
     }
   ]
 }
