@@ -1,0 +1,28 @@
+---
+compliance_markup::validate_profiles:
+  - "%{facts.target_compliance_profile}"
+
+# Needed for catalog inspection to ensure valid data
+compliance_markup::report_on_client: true
+compliance_markup::report_on_server: false
+compliance_markup::report_types:
+  - 'non_compliant'
+  - 'unknown_parameters'
+  - 'unknown_resources'
+
+# Ideally, this would be the same as the validation array but you may want to
+# do something different based on your test requirements
+compliance_markup::enforcement:
+  - "%{facts.target_compliance_profile}"
+
+# Required Parameters
+
+# The following from `simp_options` should not be required
+simp_options::puppet::server: 'puppet.foo.bar'
+simp_options::puppet::ca: 'puppet.foo.bar'
+simp_options::dns::servers :
+  - 1.2.3.4
+simp_options::ldap::bind_pw: 'bind_pw'
+simp_options::ldap::bind_hash: '{SSHA}bindhash'
+simp_options::ldap::sync_pw: 'sync_pw'
+simp_options::ldap::sync_hash: '{SSHA}synchash'
