@@ -1,3 +1,9 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.3.0-0
+- Add v2 compliance_markup data
+- Drop support for Puppet 4
+- Add support for Puppet 6
+- Add support for puppetlabs-stdlib 6
+
 * Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
 - Replace use of simplib's deprecated Puppet 3 validate_between
   with Simplib::Cron::* types.  This change allows more flexibility
